Existence of boolean modifier slows unrelated operations #45929

Closed
opened 2015-08-27 16:05:16 +02:00 by Nicola · 12 comments

System Information
Windows 8.1 x64, nvidia gtx970

Blender Version
Broken: 2.75.4 a8be746
Worked: 2.75.4 23f5407

Short description of error
Having a mesh on which i've add a boolean modifier, when I start a simple script that create some test mesh, the operation runs really slow on the last Blender version. (more than 60 seconds)
If I hide/delete the boolean modifiers, the script is really fast! (about 0.3 seconds)

No problem with version 2.75.4 23f5407

Exact steps for others to reproduce the error

  1. using the .blend attached, just run the script first (fast execution, look at the console)
  2. delete all object create by the script, unhide "arc" and turn on the boolean mod, then run again the script (slow execution)test.blend
**System Information** Windows 8.1 x64, nvidia gtx970 **Blender Version** Broken: 2.75.4 a8be746 Worked: 2.75.4 23f5407 **Short description of error** Having a mesh on which i've add a boolean modifier, when I start a simple script that create some test mesh, the operation runs really slow on the last Blender version. (more than 60 seconds) If I hide/delete the boolean modifiers, the script is really fast! (about 0.3 seconds) No problem with version 2.75.4 23f5407 **Exact steps for others to reproduce the error** 1) using the .blend attached, just run the script first (fast execution, look at the console) 2) delete all object create by the script, unhide "arc" and turn on the boolean mod, then run again the script (slow execution)[test.blend](https://archive.blender.org/developer/F228503/test.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Nicola self-assigned this 2015-08-27 16:05:16 +02:00
Author

Added subscriber: @NicolaFrascati

Added subscriber: @NicolaFrascati
Nicola removed their assignment 2015-08-27 16:13:11 +02:00

Added subscriber: @mont29

Added subscriber: @mont29

You cannot expect us to spare some time investigating what happens in such a .blend - please search for what part goes slow in your code, and submit here a simple way to reproduce it, not based on a complete work-project file & script…

You cannot expect us to spare some time investigating what happens in such a .blend - please search for what part goes slow in your code, and submit here a simple way to reproduce it, not based on a complete work-project file & script…
Author

Sorry for misunderstanding.

Slowest parts of the script are:

  • add a text (py.ops.object.text_add())
  • convert it to mesh (bpy.ops.object.convert(target='MESH'))

you can reproduce the problem starting with a blank file:

  1. add two high poly sphere (200k poly)
  2. add a boolean mod to the first with the second (ex. sphere A less sphere B)
  3. then try to add a simple text and converting to mesh
  4. turn off boolean mod
  5. repeat point 3 and see how much faster is.
Sorry for misunderstanding. Slowest parts of the script are: - add a text (py.ops.object.text_add()) - convert it to mesh (bpy.ops.object.convert(target='MESH')) you can reproduce the problem starting with a blank file: 1) add two high poly sphere (200k poly) 2) add a boolean mod to the first with the second (ex. sphere A less sphere B) 3) then try to add a simple text and converting to mesh 4) turn off boolean mod 5) repeat point 3 and see how much faster is.

Added subscriber: @ideasman42

Added subscriber: @ideasman42

@NicolaFrascati,

I tried to redo the bug, but wasn't able to (in 275a and master).
The text to mesh conversion always runs fast.
Even when theres a boolean modifier in the scene which takes a few seconds to complete.

Please make a simple test file where converting the text to a mesh is slow, when the boolean modifier is enabled.

@NicolaFrascati, I tried to redo the bug, but wasn't able to (in 275a and master). The text to mesh conversion always runs fast. Even when theres a boolean modifier in the scene which takes a few seconds to complete. Please make a simple test file where converting the text to a mesh is slow, when the boolean modifier is enabled.
Campbell Barton changed title from Slow performance executing a simple script to Existence of boolean modifier slows unrelated operations 2015-08-28 03:52:21 +02:00
Author

Here there's the file asked.

If i try to add a text or convert it to mesh with the boolean on sphereA ON, the operation is slow;
if I turn boolean OFF, the operation is immediate{F228665}

Here there's the file asked. If i try to add a text or convert it to mesh with the boolean on sphereA ON, the operation is slow; if I turn boolean OFF, the operation is immediate{[F228665](https://archive.blender.org/developer/F228665/test2.blend)}

Added subscriber: @Sergey

Added subscriber: @Sergey

I can confirm this here - I think what happens is that in current master, boolean (aka DM stack) gets recomputed when you add text object, while in 2.74 it did not. @Sergey this sounds like some depsgraph issue?

I can confirm this here - I think what happens is that in current master, boolean (aka DM stack) gets recomputed when you add text object, while in 2.74 it did not. @Sergey this sounds like some depsgraph issue?

This issue was referenced by blender/blender@b024ccd619

This issue was referenced by blender/blender@b024ccd61992e33c62485a80c903a0f284d42dc5

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender-addons#45929
No description provided.