Fix T45929: OpenSubdiv was doing extra object recalc tags