source/blender/blenkernel/intern/scene.c
@@ -1587,7 +1587,9 @@ static void scene_free_unused_opensubdiv_cache(Scene *scene)
 			if (md != NULL && md->type == eModifierType_Subsurf) {
 				SubsurfModifierData *smd = (SubsurfModifierData *) md;
 				bool object_in_editmode = object->mode == OB_MODE_EDIT;
-				if (!smd->use_opensubdiv) {
+				if (!smd->use_opensubdiv ||
+				    DAG_get_eval_flags_for_object(scene, object) & DAG_EVAL_NEED_CPU)
+				{
 					if (smd->mCache != NULL) {
 						ccgSubSurf_free_osd_mesh(smd->mCache);
 					}
